# splitfool

./: .gitignore  README.md  manage.py  pyproject.toml
core/: ExpenseCategory.json  admin.py  models.py
splitfool/: asgi.py  settings.py  urls.py  wsgi.py
